[gd_scene load_steps=7 format=4 uid="uid://c6yvoumyejs6w"]

[ext_resource type="Script" uid="uid://nlfflvdrit25" path="res://assets/stage/game_stage.gd" id="1_quov4"]
[ext_resource type="PackedScene" uid="uid://bd1it76lq7i5r" path="res://scenes/enemy/car.tscn" id="2_2t44s"]
[ext_resource type="PackedScene" uid="uid://bkilmwu2rowle" path="res://scenes/coin.tscn" id="3_klww0"]
[ext_resource type="Texture2D" uid="uid://d3hicxqo112f4" path="res://assets/stage/tilemap.png" id="4_tkfpm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h2yge"]
texture = ExtResource("4_tkfpm")
separation = Vector2i(1, 1)
14:19/0 = 0
2:24/0 = 0

[sub_resource type="TileSet" id="TileSet_1bvp3"]
sources/1 = SubResource("TileSetAtlasSource_h2yge")

[node name="GameStage" type="Node2D"]
script = ExtResource("1_quov4")
enemy_scene = ExtResource("2_2t44s")
coin_scene = ExtResource("3_klww0")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAIAAQAOABMAAAABAAIAAQAOABMAAAACAAIAAQAOABMAAAADAAIAAQAOABMAAAAEAAIAAQAOABMAAAAFAAIAAQAOABMAAAAGAAIAAQAOABMAAAAHAAIAAQAOABMAAAAIAAIAAQAOABMAAAAJAAIAAQAOABMAAAAKAAIAAQAOABMAAAALAAIAAQAOABMAAAAMAAIAAQAOABMAAAANAAIAAQAOABMAAAAOAAIAAQAOABMAAAAPAAIAAQAOABMAAAAQAAIAAQAOABMAAAARAAIAAQAOABMAAAAAAAMAAQAOABMAAAABAAMAAQAOABMAAAACAAMAAQAOABMAAAADAAMAAQAOABMAAAAEAAMAAQAOABMAAAAFAAMAAQAOABMAAAAGAAMAAQAOABMAAAAHAAMAAQAOABMAAAAIAAMAAQAOABMAAAAJAAMAAQAOABMAAAAKAAMAAQAOABMAAAALAAMAAQAOABMAAAAMAAMAAQAOABMAAAANAAMAAQAOABMAAAAOAAMAAQAOABMAAAAPAAMAAQAOABMAAAAQAAMAAQAOABMAAAARAAMAAQAOABMAAAAAAAQAAQAOABMAAAABAAQAAQAOABMAAAACAAQAAQAOABMAAAADAAQAAQAOABMAAAAEAAQAAQAOABMAAAAFAAQAAQAOABMAAAAGAAQAAQAOABMAAAAHAAQAAQAOABMAAAAIAAQAAQAOABMAAAAJAAQAAQAOABMAAAAKAAQAAQAOABMAAAALAAQAAQAOABMAAAAMAAQAAQAOABMAAAANAAQAAQAOABMAAAAOAAQAAQAOABMAAAAPAAQAAQAOABMAAAAQAAQAAQAOABMAAAARAAQAAQAOABMAAAAAAAUAAQAOABMAAAABAAUAAQAOABMAAAACAAUAAQAOABMAAAADAAUAAQAOABMAAAAEAAUAAQAOABMAAAAFAAUAAQAOABMAAAAGAAUAAQAOABMAAAAHAAUAAQAOABMAAAAIAAUAAQAOABMAAAAJAAUAAQAOABMAAAAKAAUAAQAOABMAAAALAAUAAQAOABMAAAAMAAUAAQAOABMAAAANAAUAAQAOABMAAAAOAAUAAQAOABMAAAAPAAUAAQAOABMAAAAQAAUAAQAOABMAAAARAAUAAQAOABMAAAAAAAYAAQAOABMAAAABAAYAAQAOABMAAAACAAYAAQAOABMAAAADAAYAAQAOABMAAAAEAAYAAQAOABMAAAAFAAYAAQAOABMAAAAGAAYAAQAOABMAAAAHAAYAAQAOABMAAAAIAAYAAQAOABMAAAAJAAYAAQAOABMAAAAKAAYAAQAOABMAAAALAAYAAQAOABMAAAAMAAYAAQAOABMAAAANAAYAAQAOABMAAAAOAAYAAQAOABMAAAAPAAYAAQAOABMAAAAQAAYAAQAOABMAAAARAAYAAQAOABMAAAAAAAcAAQAOABMAAAABAAcAAQAOABMAAAACAAcAAQAOABMAAAADAAcAAQAOABMAAAAEAAcAAQAOABMAAAAFAAcAAQAOABMAAAAGAAcAAQAOABMAAAAHAAcAAQAOABMAAAAIAAcAAQAOABMAAAAJAAcAAQAOABMAAAAKAAcAAQAOABMAAAALAAcAAQAOABMAAAAMAAcAAQAOABMAAAANAAcAAQAOABMAAAAOAAcAAQAOABMAAAAPAAcAAQAOABMAAAAQAAcAAQAOABMAAAARAAcAAQAOABMAAAAAAAgAAQACABgAAAABAAgAAQACABgAAAACAAgAAQACABgAAAADAAgAAQACABgAAAAEAAgAAQACABgAAAAFAAgAAQACABgAAAAGAAgAAQACABgAAAAHAAgAAQACABgAAAAIAAgAAQACABgAAAAJAAgAAQACABgAAAAKAAgAAQACABgAAAALAAgAAQACABgAAAAMAAgAAQACABgAAAANAAgAAQACABgAAAAOAAgAAQACABgAAAAPAAgAAQACABgAAAAQAAgAAQACABgAAAARAAgAAQACABgAAAAAAAkAAQACABgAAAABAAkAAQACABgAAAACAAkAAQACABgAAAADAAkAAQACABgAAAAEAAkAAQACABgAAAAFAAkAAQACABgAAAAGAAkAAQACABgAAAAHAAkAAQACABgAAAAIAAkAAQACABgAAAAJAAkAAQACABgAAAAKAAkAAQACABgAAAALAAkAAQACABgAAAAMAAkAAQACABgAAAANAAkAAQACABgAAAAOAAkAAQACABgAAAAPAAkAAQACABgAAAAQAAkAAQACABgAAAARAAkAAQACABgAAAAAAAEAAQACABgAAAABAAEAAQACABgAAAACAAEAAQACABgAAAADAAEAAQACABgAAAAEAAEAAQACABgAAAAFAAEAAQACABgAAAAGAAEAAQACABgAAAAHAAEAAQACABgAAAAIAAEAAQACABgAAAAJAAEAAQACABgAAAAKAAEAAQACABgAAAALAAEAAQACABgAAAAMAAEAAQACABgAAAANAAEAAQACABgAAAAOAAEAAQACABgAAAAPAAEAAQACABgAAAAQAAEAAQACABgAAAARAAEAAQACABgAAAAAAAAAAQACABgAAAABAAAAAQACABgAAAACAAAAAQACABgAAAADAAAAAQACABgAAAAEAAAAAQACABgAAAAFAAAAAQACABgAAAAGAAAAAQACABgAAAAHAAAAAQACABgAAAAIAAAAAQACABgAAAAJAAAAAQACABgAAAAKAAAAAQACABgAAAALAAAAAQACABgAAAAMAAAAAQACABgAAAANAAAAAQACABgAAAAOAAAAAQACABgAAAAPAAAAAQACABgAAAAQAAAAAQACABgAAAARAAAAAQACABgAAAA=")
tile_set = SubResource("TileSet_1bvp3")

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="CoinTimer" type="Timer" parent="."]
autostart = true

[node name="LeftSpawners" type="Node" parent="."]

[node name="EnemySpawner" type="Node2D" parent="LeftSpawners"]
position = Vector2(1, 160)

[node name="EnemySpawner2" type="Node2D" parent="LeftSpawners"]
position = Vector2(0, 224)

[node name="EnemySpawner3" type="Node2D" parent="LeftSpawners"]
position = Vector2(0, 288)

[node name="EnemySpawner4" type="Node2D" parent="LeftSpawners"]
position = Vector2(0, 352)

[node name="EnemySpawner5" type="Node2D" parent="LeftSpawners"]
position = Vector2(0, 416)

[node name="EnemySpawner6" type="Node2D" parent="LeftSpawners"]
position = Vector2(0, 480)

[node name="RightSpawners" type="Node" parent="."]

[node name="EnemySpawner7" type="Node2D" parent="RightSpawners"]
position = Vector2(1152, 160)

[node name="EnemySpawner8" type="Node2D" parent="RightSpawners"]
position = Vector2(1152, 224)

[node name="EnemySpawner9" type="Node2D" parent="RightSpawners"]
position = Vector2(1152, 288)

[node name="EnemySpawner10" type="Node2D" parent="RightSpawners"]
position = Vector2(1152, 352)

[node name="EnemySpawner11" type="Node2D" parent="RightSpawners"]
position = Vector2(1152, 416)

[node name="EnemySpawner12" type="Node2D" parent="RightSpawners"]
position = Vector2(1152, 480)

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
